@@ -1,4 +1,4 @@
 # Do not change this order if you don't know what you are doing.
-AUTOMAKE_OPTIONS = 1.7
+AUTOMAKE_OPTIONS = 1.7 gnu
 SUBDIRS = netboot stage2 stage1 lib grub util docs
 EXTRA_DIST = BUGS MAINTENANCE
