@@ -10,5 +10,6 @@ LDFLAGS = -nostdlib -Wl,-N,-Ttext,7C00
 noinst_PROGRAMS = stage1.exec
 stage1_exec_SOURCES = stage1.S stage1.h
 
-%: %.exec
+SUFFIXES = .exec
+.exec:
 	$(OBJCOPY) -O binary $< $@
